# cctv-plan

./: .gitignore  README.md  pyproject.toml
artifacts/planner/: README.md
src/common/: __init__.py  check.ipynb  floorplan.py
src/common/floorplan_loader/: __init__.py  decoder.py  loader.py  metadata.py  validator.py
src/planner/: __init__.py  k_runner.py  main.ipynb  main.py  presentation.py  runner.py
src/planner/_shared/: __init__.py  bootstrap.py  cache.py  config.py  progress.py  sparse.py
src/planner/phase01_candidate_generation/: __init__.py  artifacts.py  check.ipynb  constants.py  core.py  generation.py  geometry.py  io.py  validation.py
src/planner/phase02_visibility/: __init__.py  accessors.py  artifacts.py  check.ipynb  constants.py  core.py  generation.py  io.py  line_of_sight.py  validation.py
src/planner/phase03_scoring/: __init__.py  accessors.py  artifacts.py  check.ipynb  core.py  generation.py  io.py  scoring.py  validation.py
src/planner/phase04_optimization/: __init__.py  artifacts.py  check.ipynb  constants.py  core.py  coverage.py  io.py  model.py  precompute.py  progress.py  resolution.py  solution.py  solving.py  threshold_index.py  validation.py
src/planner/phase05_visualization/: core.py  (+11 more)
static/editor/: config.js  controller.js  index.html  io.js  main.js  model.js  renderer.js  types.js
tests/: test_floor_plan_loader.py  test_phase01_candidate_generation.py  test_phase02_visibility.py  test_phase03_scoring.py  test_phase04_optimization.py  test_phase05_visualization.py  test_planner_presentation.py  test_planner_runner.py
(+292 files in other folders)
